--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Story of TF-mustang
+title: My Story
 name: tfmustang
 email: limuijin@gmail.com
 description: TF-mustang's site
