--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,41 @@
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: My Story
-name: tfmustang
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Black & White 3 Dog
 email: limuijin@gmail.com
-description: TF-mustang's site
+description: >- # this means to ignore newlines until "baseurl:" (긴줄명령이다)
+  My new place 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://tfmustang.github.io" # the base hostname & protocol for your site
-twitter_username: tfmustang1
-github_username:  tfmustang
+url: "https://tfmustang.github.io.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: NoMoreTwitt
+github_username:  Tfmustang
 
 # Build settings
-kramdown:
- input: GFM
-#gems: ["emoji_for_jekyll"]
+markdown: kramdown
+theme: minima
+plugins:
+  - jekyll-feed
 
-# serve
-host: 192.168.0.12
-
-theme: jekyll-theme-midnight
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
